k8s/apps/overlays/rhlab/kafka/patches/console-ui.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: console-ui-route
spec:
  host: console-ui-route-netsentinel.apps.cluster-76sbq.76sbq.sandbox1319.opentlc.com
